--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react-intro-tutorial",
   "version": "0.1.0",
   "private": true,
+   "homepage": "https://chiri03.github.io/react-intro-tutorial/",
   "dependencies": {
+
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +25,8 @@
       "react-app/jest"
     ]
   },
+
+  
   "browserslist": {
     "production": [
       ">0.2%",
