--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-intro-tutorial",
+  "name": "react-intro",
   "version": "0.1.0",
   "private": true,
    "homepage": "https://chiri03.github.io/react-intro-tutorial/",
